data/all_generated_tests/raw_wast_tests/nop_IncorrectHandlingofControlFlowAcrossModuleBoundaries_809.wast
;; 10. **Testing `nop` in Recursively Called Imported Functions**:    - **Constraint Checked**: Ensures stack integrity during recursive calls with `nop`.    - **Description**: Import a function designed for recursion and place `nop` instructions at various points inside the recursive calls. Test for any stack inconsistencies or errors during deep recursive calls involving `nop`.

(assert_invalid
  (module
    (import "env" "recFunc" (func $recFunc (param i32) (result i32)))
    (func (export "testFunc") (param i32) (result i32)
      (call $recFunc (local.get 0))
      nop
      (if (i32.eqz (local.get 0))
        (then (i32.const 0))
        (else (call $recFunc (i32.sub (local.get 0) (i32.const 1))))
      )
    )
  )
  "type mismatch"
)